# PolyVisor-Platform

./: .gitignore  Cargo.toml  DEVELOPMENT_COMPLETE.md  README.md  design.md  docker-compose.yml  prd.md
backend/: Cargo.toml
backend/docs/: api.html
backend/src/: config.rs  database.rs  graphql.rs  handlers.rs  main_old.rs  middleware.rs  websocket.rs
backend/src/api/: contributors.rs  health.rs  metrics.rs  mod.rs  privacy.rs  proofs.rs
backend/src/services/: contributor_service.rs  health_service.rs  mod.rs  privacy_service.rs  zkproof_service.rs
blockchain/node/: Cargo.toml
blockchain/node/src/: chain_spec.rs  main.rs  rpc.rs  service.rs
blockchain/runtime/: Cargo.toml
blockchain/runtime/src/: lib.rs
contracts/analytics/: Cargo.toml  lib.rs
docs/: README.md  api.md  architecture.md  database.md  deployment.md  development.md  faq.md  user-guide.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: MetricsChart.tsx  Navigation.tsx  RealtimeStatus.tsx
frontend/src/pages/: Analytics.tsx  Contributors.tsx  Dashboard.tsx  NetworkHealth.tsx  PrivacySettings.tsx
scripts/: dev.sh  install.sh  server-start.sh  test.sh
zkproof/: Cargo.toml
zkproof/src/: circuits.rs  lib.rs  prover.rs  utils.rs  verifier.rs
