[package]
name = "zkproof"
version = "0.1.0"
edition = "2021"
authors = ["PolyVisor Team"]
description = "Zero-Knowledge Proof Service for PolyVisor"
license = "MIT"

[dependencies]
# Cryptography
bellman = "0.14"
pairing = "0.23"
rand = "0.8"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async
tokio = { version = "1.0", features = ["full"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

[dev-dependencies]
criterion = "0.5"

# [[bench]]
# name = "proof_benchmark"
# harness = false